refactor: service & dto 코드 리팩토링